--- a/public/addexperiences.html
+++ b/public/addexperiences.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 2</title>
     <script src="src/js/script.js" defer></script>
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body>
