--- a/public/addexperiences.html
+++ b/public/addexperiences.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 2</title>
-    <script src="src/js/script.js" defer></script>
-    <link rel="stylesheet" href="public/css/style.css">
+    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
