--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 2</title>
-    <link rel="stylesheet" href="public/css/style.css">
-    <script type= "module" src="src/js/script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script type= "module" src="/js/script.js" defer></script>
 
 </head>
 
