--- a/public/addexperiences.html
+++ b/public/addexperiences.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 2</title>
-    <script src="/js/script.js" defer></script>
+    <script src="/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,9 +16,9 @@
         <div class="menu">    <p id="headertext">Moment 2 Backend</p>
             <nav>
                 <ul>
-                    <li><a href="index.html">Your work experience</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a class="current" href="addexperiences.html">Add experiences</a></li>
+                    <li><a href="/index.html">Your work experience</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a class="current" href="/addexperiences.html">Add experiences</a></li>
 
                 </ul>
             </nav>
