--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 2</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type= "module" src="/js/script.js" defer></script>
+    <script type= "module" src="/script.js" defer></script>
 
 </head>
 
@@ -19,9 +19,9 @@
             <p id="headertext">Moment 2 Backend</p>
             <nav>
                 <ul>
-                    <li><a class="current" href="index.html">Your work experience</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="addexperiences.html">Add experiences</a></li>
+                    <li><a class="current" href="/index.html">Your work experience</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/addexperiences.html">Add experiences</a></li>
 
                 </ul>
             </nav>
