changed about text

--- a/public/about.html
+++ b/public/about.html
@@ -27,7 +27,7 @@
         <article>
             <h1>Backend-development, mid sweden university</h1>
             <h2>Rosali Johansson</h2>
-            <p id="about">This website is made for the course Backend development at mid sweden university. The purpose of the website is to store your past work experiences. You can add new experiences on "add experiences" and you can find the saved work experiences  on "your work experience". The website is using rest API with this database server: <a>https://github.com/Rosalij/moment2backend.git</a>. you can read more about the API in the README.</p>
+            <p id="about">This website is made for the course Backend development at mid sweden university. The purpose of the website is to store your past work experiences. You can add new experiences on "add experiences" and you can find the saved work experiences  on "your work experience". The website is using a rest API with methods get, create and delete, found at this link: <a>https://github.com/Rosalij/moment2backend.git</a>. you can read more about the API in the README.</p>
         </article>
     </main>
     <!--footer-->
